# Automated-Camera-IQA

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: boresight.yaml  default_isp.yaml  sfr_batch.yaml
src/iqa/: __init__.py
src/iqa/calibration/: __init__.py  boresight.py  extrinsic.py
src/iqa/cli/: __init__.py  cmd_boresight.py  cmd_isp.py  cmd_sfr.py  main.py
src/iqa/metrics/: __init__.py  mtf_utils.py  report.py  sfr.py
src/iqa/pipeline/: __init__.py  awb.py  base.py  blc.py  ccm.py  demosaic.py  pipeline.py
src/iqa/utils/: config_loader.py  image_io.py  logger.py
tests/: conftest.py
tests/calibration/: test_boresight.py
tests/cli/: test_cli.py
tests/metrics/: test_report.py  test_sfr.py
tests/pipeline/: test_awb.py  test_blc.py  test_ccm.py  test_demosaic.py
