[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "automated-camera-iqa"
version = "0.1.0"
description = "Automotive camera ISP simulation and image quality assessment toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["ISP", "IQA", "automotive", "camera", "MTF", "SFR", "boresight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.scripts]
iqa = "iqa.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/iqa"]
